Update search grid styling changes for cards

--- a/frontend/src/styles/components/_grid-card.scss
+++ b/frontend/src/styles/components/_grid-card.scss
@@ -1,6 +1,8 @@
 .grid-card {
   margin-bottom: $space-l;
   width: 20%;
+  height: 500px;
+  margin: 10px;
 
   @media (max-width: $mq-m) {
     width: 60%;
