Fix image folder reference in stylesheets

--- a/frontend/src/styles/components/_search.scss
+++ b/frontend/src/styles/components/_search.scss
@@ -22,7 +22,7 @@
 
   &__input {
     background-color: $color-shade-light;
-    background-image: url('./images/icon-search.svg');
+    background-image: url('../../images/icon-search.svg');
     background-position: 1.5625rem;
     background-repeat: no-repeat;
     background-size: 2.5rem;
