--- a/frontend/src/styles/components/_search.scss
+++ b/frontend/src/styles/components/_search.scss
@@ -30,6 +30,7 @@
     height: 5rem;
     padding-left: 5rem;
     width: 100%;
+    font-family: $font-family-base;
 
     @media (max-width: $mq-s) {
       height: 4rem;
@@ -62,12 +63,14 @@
     display: flex;
     margin-left: $space-s;
     margin-bottom: $space-s;
+    font-family: $font-family-base;
   }
 
   &__row_category {
     display: flex;
     margin-bottom: $space-s;
     margin-top: $space-m;
+    font-family: $font-family-base;
     
     @media (max-width: $mq-m){
       margin-bottom: $space-s;
