Add Styling and Functionality to SelectPage

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -35,7 +35,7 @@
 
 // 5. Components
 @import
-  // '/styles/components/btn',
+  '/styles/components/btn',
   // '/styles/components/explore',
   // '/styles/components/search',
   '/styles/components/grid-card';
