Further Header and SelectPage styling

--- a/frontend/src/styles/layout/_selectpage-head.scss
+++ b/frontend/src/styles/layout/_selectpage-head.scss
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     height: 94px;
     justify-content: space-between;
+    align-items: center;
     margin-bottom: $space-xl;
     padding-left: $space-m;
     padding-right: $space-m;
