--- a/frontend/src/styles/components/_search.scss
+++ b/frontend/src/styles/components/_search.scss
@@ -6,6 +6,15 @@
 
   @include main-content_responsive();
 
+  &__button {
+    width: 100%;
+  }
+
+  &__section {
+    padding: 10px;
+    width: 200px;
+  }
+
   &__content {
     display: flex;
     padding-bottom: 6rem;
