--- a/frontend/src/styles/components/_search.scss
+++ b/frontend/src/styles/components/_search.scss
@@ -14,7 +14,11 @@
     padding: 10px;
     width: 200px;
 
-    @media (max-width: $mq-m) {
+    @media (max-width: $mq-l) {
+      width: 135px;
+    }
+
+    @media (max-width: $mq-xs) {
       width: 100px;
     }
   }
@@ -112,6 +116,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: pre-wrap;
+    @media (max-width: $mq-m) {
+      font-size: 14px
+    }
   }
 
   &__tags {
