Fix select outline bug with select page

--- a/frontend/src/styles/components/_grid-card.scss
+++ b/frontend/src/styles/components/_grid-card.scss
@@ -24,7 +24,7 @@
     max-height: 31.25rem;
     max-width: 31.25rem;
     margin-bottom: $space-s;
-    object-fit: contain;
+    // object-fit: contain;
     width: 100%;
 
     @media (max-width: $mq-m){
