Add restyle for explore page

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -36,7 +36,7 @@
 // 5. Components
 @import
   '/styles/components/btn',
-  // '/styles/components/explore',
+  '/styles/components/explore',
   '/styles/components/search',
   '/styles/components/grid-card';
   // '/styles/components/original',
