Update styling on explore page

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -5,10 +5,9 @@
     width: 500px;
   }
 
-  &__top-stack {
-    // height: 35vh;
-    // background-color: blue;
-    // padding: 10px;
+  &__buttons {
+    margin: 10px 0px;
+    width: 250px;
   }
 
   &__dropdown {
