--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -47,7 +47,7 @@
     display: block;
     margin: auto;
     object-fit: cover;
-    box-shadow: 0px 0px 3px gray;
+    // box-shadow: 0px 0px 3px gray;
     max-width: 300px;
     z-index: calc(#{$z-index-s} * -1);
 
@@ -71,6 +71,7 @@
 
   &__slider {
     height: 25vh;
+    overflow: visible;
   }
 
   &__grid-list-container {
