Add share buttons for facebook and twitter; update tab logo icon

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -5,6 +5,10 @@
     width: 500px;
   }
 
+  &__share-button {
+    margin: 0px 10px;
+  }
+
   &__buttons {
     margin: 10px 0px;
     width: 250px;
