--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -45,7 +45,8 @@
   // '/styles/components/artwork-info';
 
 // 6. Page-specific styles
-// @import
+@import
   // '/styles/pages/map',
   // '/styles/pages/explore';
+  '/styles/pages/about';
 
