Add basic breakpoints with react-with-breakpoints

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -42,8 +42,11 @@
   }
 
   &__main-images {
-    // height: 35vh;
     padding: 10px;
+
+    @media (max-width: $mq-l) {
+      justify-content: center;
+    }
   }
 
   &__card-img {
