--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -132,4 +132,65 @@
   .dZUveh {
     padding: 0;
   }
+
+  &__img {
+    padding-bottom: 10px;
+  }
+
+  &__img-container {
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 10px;
+  }
+
+  &__slide-buttons {
+    position: absolute;
+    bottom: -30px;
+    width: 100%;
+    height: 30px;
+    margin-top: auto !important;
+    // box-shadow: 0px 5px 10px 5px gray;
+  }
+
+  &__slide-enter {
+    bottom: -30px;
+  }
+
+  &__slide-enter-done {
+    bottom: 0px;
+    transition: bottom 0.15s linear;
+  }
+
+  &__slide-exit {
+    bottom: 0px;
+  }
+  
+  &__slide-exit-done {
+    bottom: -30px;
+    transition: bottom 0.25s linear;
+  }
+
+  &__slide-button-link {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    width: 50%;
+    color: black;
+    // background-color: gainsboro;
+    background-color: rgb(240,240,240);
+    font-family: $font-family-base;
+    font-weight: 500;
+    font-size: $font-m;
+    line-height: 30px;
+  }
+
+  &__slide-button-link:hover {
+    background-color: gainsboro;
+  }
+
+  &__slide-button-sep {
+    width: 1px;
+    height: 100%;
+    background-color: gainsboro;
+  }
 }
