--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -38,9 +38,9 @@
   '/styles/components/btn',
   '/styles/components/explore',
   '/styles/components/search',
-  '/styles/components/grid-card';
+  '/styles/components/grid-card',
   // '/styles/components/original',
-  // '/styles/components/nav',
+  '/styles/components/nav';
   // '/styles/components/gen-art',
   // '/styles/components/artwork-info';
 
