--- a/frontend/src/styles/components/_nav.scss
+++ b/frontend/src/styles/components/_nav.scss
@@ -19,12 +19,19 @@
     display: flex;
     height: inherit;
     left: 0;
-    position: absolute;
+    padding: 10px 10px;
+    
     text-decoration: none;
     text-transform: uppercase;
     width: $nav-unit;
 
+    &:visited {
+      color: black;
+    }
+
     img{
+      height: 3rem;
+      position: absolute;
       max-height: $nav-unit;
       @media (max-width: $mq-s) {
         max-height: $nav-unit-s;
@@ -57,8 +64,14 @@
   }
 
   &__text {
-    font-size: 0.75rem;
+    font-size: $font-l;
+    font-family: $font-family-heading;
+    font-weight: $font-weight-bold;
+    padding: 10px 10px;
     white-space: nowrap;
+    text-decoration: none;
+    position: absolute;
+    right: 0;
   }
 
   &__image {
