--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -6,30 +6,30 @@
   }
 
   &__share-button {
-    margin: 5px 10px;
+    margin: 15px 10px;
     cursor: pointer;
   }
 
   &__buttons {
-    margin: 10px 0px;
+    margin: 4px 0px;
     width: 250px;
   }
 
   &__dropdown {
     justify-content: center;
-    margin: 0px 15px;
-    width: 200px;
+    margin: 0px 15px !important;
+    width: 200px !important;
 
     @media (max-width: $mq-l) {
-      width: 175px;
+      width: 175px !important;
     }
 
     @media (max-width: $mq-m) {
-      width: 150px;
+      width: 150px !important;
     }
 
     @media (max-width: $mq-s) {
-      width: 200px;
+      width: 200px !important;
     }
   }
 
@@ -37,7 +37,7 @@
     margin: auto;
 
     @media (max-width: $mq-s) {
-      width: 200px;
+      width: 200px !important;
     }
   }
 
@@ -147,7 +147,7 @@
   &__slide-buttons {
     position: absolute;
     bottom: -30px;
-    width: 100%;
+    width: 100% !important;
     height: 30px;
     margin-top: auto !important;
     // box-shadow: 0px 5px 10px 5px gray;
@@ -175,7 +175,7 @@
     display: inline-block;
     text-align: center;
     text-decoration: none;
-    width: 50%;
+    width: 100%;
     color: black;
     // background-color: gainsboro;
     background-color: rgb(240,240,240);
@@ -191,7 +191,7 @@
 
   &__slide-button-sep {
     width: 1px;
-    height: 100%;
+    height: 30px;
     background-color: gainsboro;
   }
 
