--- a/frontend/src/styles/components/_grid-card.scss
+++ b/frontend/src/styles/components/_grid-card.scss
@@ -1,9 +1,9 @@
 .grid-card {
   position: relative;
   margin-bottom: $space-l;
-  width: 15%;
-  height: auto;
-  margin: 12px;
+  width: 15% !important;
+  height: auto !important;
+  margin: 12px !important;
   padding-bottom: 20px;
   overflow: hidden;
 
@@ -71,7 +71,7 @@
   &__buttons {
     position: absolute;
     bottom: -30px;
-    width: 100%;
+    width: 100% !important;
     height: 30px;
     margin-top: auto !important;
     // box-shadow: 0px 5px 10px 5px gray;
@@ -99,7 +99,7 @@
     display: inline-block;
     text-align: center;
     text-decoration: none;
-    width: 50%;
+    width: 100%;
     color: black;
     // background-color: gainsboro;
     background-color: rgb(240,240,240);
@@ -115,7 +115,7 @@
 
   &__button_sep {
     width: 1px;
-    height: 100%;
+    height: 30px;
     background-color: gainsboro;
   }
 }
