Move options dropdown to original panel

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -35,10 +35,7 @@
 
   &__options-container {
     margin: auto;
-
-    @media (max-width: $mq-s) {
-      width: 200px !important;
-    }
+    width: 200px;
   }
 
   &__main-images {
