Fix museum overlay icon

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -131,7 +131,6 @@
   }
 
   &__img {
-    margin: 0px 10px;
     padding-bottom: 10px;
   }
 
@@ -196,8 +195,12 @@
     position: absolute;
     top: 0;
     left: 0;
-    margin-left: 10px;
+    opacity: 50%;
 
+    &:hover {
+      opacity: 100%;
+      transition: opacity 0.4s;
+    }
   }
 
   &__artwork-frame {
