add dynamic redirect urls

--- a/backend/templates/share.html
+++ b/backend/templates/share.html
@@ -6,9 +6,9 @@
         <meta property="og:description" content="{{ description }}" />
     </head>
     <script>
-        window.location = 'https://aka.ms/mosaic'
+        window.location = "{{ redirect_url }}"
     </script>
     <body>
-        You are being redirected to Mosaic. Click <a href="https://aka.ms/mosaic">here</a> to be redirected...
+        You are being redirected to Mosaic. Click <a href="{{ redirect_url }}">here</a> to be redirected...
     </body>
 </html>
