Fixed crash and rationale disabled hover css

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -23,7 +23,7 @@
       background-color: transparent;
       border-color: #D8D8D8;
       color: #D8D8D8;
-      cursor: pointer;
+      cursor: default;
     }
 
   }
