Begin adding image banner

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -220,4 +220,10 @@
   &__artwork-frame {
     position: relative;
   }
+
+  &__background-banner {
+    width: 100%;
+    height: 50vh;
+    background-color: gray;
+  }
 }
