Implement facebook image link sharing

--- a/frontend/src/styles/components/_nav.scss
+++ b/frontend/src/styles/components/_nav.scss
@@ -3,10 +3,12 @@
 // -------------------------------------------------------------
 .nav {
   align-items: center;
+  border-bottom: 1px solid $color-shade-dark;
   display: flex;
   height: $nav-unit;
   justify-content: space-between;
   padding: 5px 15px;
+  margin-bottom: 20px;
 
   @media (max-width: $mq-s) {
     margin-bottom: $space-s;
