Add banner image; change facebook sharing to large image preview

--- a/frontend/src/styles/components/_nav.scss
+++ b/frontend/src/styles/components/_nav.scss
@@ -3,12 +3,11 @@
 // -------------------------------------------------------------
 .nav {
   align-items: center;
-  border-bottom: 1px solid $color-shade-dark;
+  background-color: white;
   display: flex;
   height: $nav-unit;
   justify-content: space-between;
   padding: 5px 15px;
-  margin-bottom: 20px;
 
   @media (max-width: $mq-s) {
     margin-bottom: $space-s;
