--- a/frontend/src/styles/components/_btn.scss
+++ b/frontend/src/styles/components/_btn.scss
@@ -8,6 +8,7 @@
   color: $color-secondary;
   font-size: $font-l;
   font-weight: $font-weight-bold;
+  font-family: $font-family-base;
   letter-spacing: $letter-spacing;
   text-decoration: none;
   margin-left: 0;
