--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -222,8 +222,23 @@
   }
 
   &__background-banner {
+    position: relative;
     width: 100%;
     height: 50vh;
-    background-color: gray;
+    overflow: hidden;
+  }
+
+  &__get-started {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    bottom: 25px;
+    color: white;
+    border: 2px solid white;
+  }
+
+  &__parallax {
+    position: fixed;
+    z-index: -1;
   }
 }
