--- a/frontend/src/styles/components/_nav.scss
+++ b/frontend/src/styles/components/_nav.scss
@@ -9,6 +9,10 @@
   justify-content: space-between;
   padding: 5px 15px;
 
+  @media (max-width: 1128px) {
+    border-bottom: 1px solid gainsboro;
+  }
+
   @media (max-width: $mq-s) {
     margin-bottom: $space-s;
     height: $nav-unit-s;
