--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -225,7 +225,6 @@
     position: relative;
     width: 100%;
     height: 50vh;
-    overflow: hidden;
   }
 
   &__banner-text {
@@ -239,6 +238,7 @@
     font-family: $font-family-base;
     font-size: 36px;
     font-weight: bold;
+    text-shadow: 0px 0px 25px black;
   }
 
   &__get-started {
@@ -246,8 +246,8 @@
     left: 50%;
     transform: translate(-50%, 0%);
     bottom: 25px;
-    color: white;
-    border: 2px solid white;
+    color: gainsboro;
+    border: 2px solid gainsboro;
   }
 
   &__parallax {
@@ -263,7 +263,7 @@
   &__compare-block {
     height: calc(50vh - 95px);
     // background-color: white;
-    padding: 15px 0px;
+    padding: 20px 0px 10px 0px;
 
     @media (max-width: 1128px) {
       height: auto;
