--- a/frontend/src/styles/components/_grid-card.scss
+++ b/frontend/src/styles/components/_grid-card.scss
@@ -7,6 +7,10 @@
   padding-bottom: 20px;
   overflow: hidden;
 
+  &:hover {
+    box-shadow: 0px 0px 20px dimgrey;
+  }
+
   @media (min-width: $mq-l) {
   }
 
