Add dynamic carousel width for breakpoints

--- a/frontend/src/styles/components/_btn.scss
+++ b/frontend/src/styles/components/_btn.scss
@@ -13,7 +13,7 @@
   text-decoration: none;
   margin-left: 0;
   margin-right: 0;
-  padding: $space-m;
+  padding: $space-s;
   text-transform: uppercase;
   transition-duration: $animation-speed;
   transition-property: color, background-color;
