Fix opacity bug

--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -213,10 +213,10 @@
     position: absolute;
     top: 0;
     left: 0;
-    opacity: 50%;
+    opacity: 0.4;
 
     &:hover {
-      opacity: 100%;
+      opacity: 1;
       transition: opacity 0.4s;
     }
   }
