--- a/frontend/src/styles/components/_search.scss
+++ b/frontend/src/styles/components/_search.scss
@@ -59,6 +59,8 @@
     padding-left: 5rem;
     width: 100%;
     font-family: $font-family-base;
+    font-weight: bold;
+    font-size: larger;
 
     @media (max-width: $mq-s) {
       height: 4rem;
