updated website to be cleaner with more features

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -40,7 +40,8 @@
   '/styles/components/search',
   '/styles/components/grid-card',
   // '/styles/components/original',
-  '/styles/components/nav';
+  '/styles/components/nav',
+  '/styles/components/burger';
   // '/styles/components/gen-art',
   // '/styles/components/artwork-info';
 
