--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -11,8 +11,10 @@
   }
 
   &__buttons {
-    margin: 5px 0px !important;
     width: 250px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 10px;
 
     &:disabled {
       border-color: #D8D8D8;
@@ -229,7 +231,7 @@
   &__background-banner {
     position: relative;
     width: 100%;
-    height: 50vh;
+    height: 60vh;
   }
 
   &__banner-text {
@@ -237,22 +239,24 @@
     width: 50%;
     left: 50%;
     transform: translate(-50%, 0%);
-    bottom: 150px;
+    bottom: 40%;
     color: white;
     text-align: center;
     font-family: $font-family-base;
     font-size: 36px;
     font-weight: bold;
-    text-shadow: 0px 0px 25px black;
+    text-shadow: 0px 0px 40px black, 0px 0px 40px black, 0px 0px 40px black;
   }
 
   &__get-started {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-    bottom: 25px;
-    color: gainsboro;
-    border: 2px solid gainsboro;
+    bottom: 10%;
+    font-size: 28px;
+    color: rgb(255, 255, 255);
+    border: 2px solid white;
+    background-color: #0000009e;
   }
 
   &__parallax {
@@ -262,12 +266,16 @@
     left: 50%;
     transform: translate(-50%, 0%);
     z-index: -1;
-    filter: brightness(2)
   }
 
   &__compare-block {
     height: calc(35vh + 32px + 20px + 70px);
     padding: 20px 0px 10px 0px;
+    display: flex;
+    flex: auto;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
 
     @media (max-width: 1128px) {
       height: auto;
@@ -292,10 +300,7 @@
   &__search {
     background-color: #f0f0f0 ;
     margin-bottom: 10px;
-    width: 60%;
+    flex-grow: 1;
     height: 60px;
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0%);
   }
 }
