--- a/frontend/src/styles/components/_burger.scss
+++ b/frontend/src/styles/components/_burger.scss
@@ -14,7 +14,7 @@
   
   /* Color/shape of burger icon bars on hover*/
   .bm-burger-bars-hover {
-    background: #a90000;
+    background: black;
   }
   
   /* Position and sizing of clickable cross button */
