--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -62,11 +62,17 @@
   }
 
   &__card-img {
-    height: 100%;
+    height: 96%;
     max-width: 100%;
-    display: block;
     margin: auto;
     object-fit: cover;
+    overflow: visible !important;
+
+    display: flex;
+    flex: auto;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
     // box-shadow: 0px 0px 3px gray;
     max-width: 300px;
     z-index: calc(#{$z-index-s} * -1);
@@ -150,9 +156,6 @@
     padding: 0;
   }
 
-  &__img {
-    // margin-bottom: 10px;
-  }
 
   &__img-container {
     position: relative;
@@ -248,6 +251,44 @@
     text-shadow: 0px 0px 40px black, 0px 0px 40px black, 0px 0px 40px black;
   }
 
+  &__pick-image-text {
+    color: black;
+    left: auto;
+    @media (max-width: 1128px) {
+      height: auto;
+      margin-top: 75px !important;
+    }
+    margin-top: 20px !important;
+    text-align: center;
+    font-family: $font-family-base;
+    font-size: 36px;
+    font-weight: bold;
+  }
+
+  &__big-text {
+    color: black;
+    left: auto;
+    margin-top: 20px !important;
+    text-align: center;
+    font-family: $font-family-base;
+    font-size: 36px;
+    font-weight: bold;
+  }
+
+  
+  &__medium-text {
+    color: black;
+    left: auto;
+    margin-top: 20px !important;
+    text-align: center;
+    font-family: $font-family-base;
+    font-size: 34px;
+    @media (max-width: 1128px) {
+      font-size: 18px;
+    }
+    padding: 20px
+  }
+
   &__get-started {
     position: absolute;
     left: 50%;
@@ -268,6 +309,22 @@
     z-index: -1;
   }
 
+  &__horizontal-img-container {
+    display: flex;
+    flex: auto;
+    width:100%;
+    margin-top:40px !important;
+    margin-bottom:40px;
+
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
+
+  &__horizontal-img {
+   height: 30vh;
+  }
+
   &__compare-block {
     height: calc(35vh + 32px + 20px + 70px);
     padding: 20px 0px 10px 0px;
@@ -279,7 +336,7 @@
 
     @media (max-width: 1128px) {
       height: auto;
-      margin-top: 75px;
+      margin-top: 30px;
     }
   }
 
