--- a/frontend/src/styles/components/_explore.scss
+++ b/frontend/src/styles/components/_explore.scss
@@ -237,6 +237,13 @@
     height: 60vh;
   }
 
+  &__background-banner-2 {
+    position: relative;
+    width: 100%;
+    height: 30vh;
+  }
+
+
   &__banner-text {
     position: absolute;
     width: 50%;
@@ -249,6 +256,36 @@
     font-size: 36px;
     font-weight: bold;
     text-shadow: 0px 0px 40px black, 0px 0px 40px black, 0px 0px 40px black;
+  }
+
+  &__banner-text-2 {
+    color: black;
+    text-align: center;
+    font-family: $font-family-base;
+    font-size: 36px;
+    font-weight: bold;
+  }
+
+  &__disclaimer-text {
+    color: black;
+    left: auto;
+    @media (max-width: 1128px) {
+      height: auto;
+      margin-top: 5px !important;
+      margin-left: 5% !important;
+      margin-right: 5% !important;
+      margin-bottom: 5% !important;
+      font-size: 18px;
+    }
+    margin-top: 25px !important;
+    margin-left: 10% !important;
+    margin-right: 10% !important;
+    margin-bottom: 10% !important;
+
+    text-align: center;
+    font-family: $font-family-base;
+    font-size: 24px;
+    font-weight: normal;
   }
 
   &__pick-image-text {
